# lem_in

./: CMakeLists.txt  Makefile  a.out  author  djkstra.c  freez.c  git_push  hash_table.c  lem-in  lem_in.h  lem_in.h.gch  list_methods.c  main.c  parser.c  result  test  test1  valid.c  visual
a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printf/: Makefile
ft_printf/ft_printf/: convert_float_to_str.c  ft_printf.c  help_function_float.c  help_function_parsers.c  long_arithmetic.c  parsers.c  parsers_printf.c  print_float.c
ft_printf/include/: ft_printf.h  ft_printf.h.gch
ft_printf/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+27 more)
include/: lem_in.h  visual_header.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
lem_in/: algorithm.c  djkstra_function.c  freez.c  main.c  print_alg.c  search_path.c  work_with_matrix.c
share/: help_function.c  parser.c  valid.c
visualisation/: a.out  list_method_vis.c  main.c  main_test.c  main_visual.c  parsers.c  print_graph_ants.c  run_ants.c  start_vis.c  test.c  visual_header.h
